plugins {
    id 'idea'
    id 'java'
    id 'application'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'application'

    repositories {
        mavenCentral()
    }

    configurations.configureEach {
        resolutionStrategy.eachDependency {
            if (it.requested.group == 'io.aeron') {
                it.useVersion aeronVersion
            }
            if (it.requested.group == 'org.apache.logging.log4j') {
                it.useVersion log4jVersion
            }
        }
    }

    application {
        mainClass = "org.example.Main"
        applicationDefaultJvmArgs = ["--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
//                                     '-XX:+UnlockExperimentalVMOptions', '-XX:+UseEpsilonGC',
                                     "-Xmx256m", "-Xms256m", "-XX:+AlwaysPreTouch"]
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}